--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     for</p>
                 <div class="d-flex justify-content-center ">
                     <a href="#contact" class="btn fs-4 mt-3 contact__button" id="hire">Hire Me</a>
-                    <a href="#contact" class="btn fs-4 mt-3 contact__button-cv" id="hire">Download CV</a>
+                    <a href="resume/index.html" class="btn fs-4 mt-3 contact__button-cv" id="hire">View CV</a>
                 </div>
             </div>
         </div>
