--- a/resume/index.html
+++ b/resume/index.html
@@ -11,7 +11,7 @@
     <!--========== CSS ==========-->
     <link rel="stylesheet" href="assets/css/styles.css">
 
-    <title>Responsive resume cv</title>
+    <title>MardhaMardiyaCV</title>
 </head>
 
 <body>
