--- a/resume/index.html
+++ b/resume/index.html
@@ -137,8 +137,7 @@
                     <p class="profile__description">I am a student from Vocational Education University of Brawijaya,
                         Malang, Indonesia. I come from Banjarmasin, South Kalimantan, at Brawijaya University I am
                         pursuing higher education in information systems which focuses on planning and software
-                        development, in that department I have also made several projects both in terms of front-end and
-                        back-end as well as design related to the required documents for software development.</p>
+                        development.</p>
                 </section>
 
                 <!--========== EDUCATION ==========-->
