--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 
 
-    <title>My Portfolio|Mardha Mardiya</title>
+    <title>My Portfolio | Mardha Mardiya</title>
 
 </head>
 
@@ -137,7 +137,7 @@
                         <img src="img/portofolio1.png" class="w-100 shadow-sm " alt="mardha mardiya">
                         <h3 class="text-capitalize fs-5 my-2 text-danger">Landing Page Resto <br> (HTML/CSS/JavaScript)
                         </h3>
-                        <p class=""> <a href="https://banuatumpeng.com" class="text-decoration-none text-danger ">Live
+                        <p class=""> <a href="https://banuatumpeng.com" class="text-decoration-none text-danger ">
                                 Demo</a></p>
                     </div>
                 </div>
@@ -147,6 +147,9 @@
                         <h3 class="text-capitalize fs-6 my-2 text-danger">Web Application <br> Wirehouse Information
                             <br> (PHP Native)
                         </h3>
+                        <p class=""> <a href="https://github.com/mardhamardiya18/inventory"
+                                class="text-decoration-none text-danger ">
+                                Project</a></p>
 
                     </div>
                 </div>
@@ -155,14 +158,43 @@
                         <img src="img/portofolio3.png" class="w-100 shadow-sm " alt="mardha mardiya">
                         <h3 class="text-capitalize fs-5 my-2 text-danger">Web Application Community<br> (Laravel)
                         </h3>
+                        <p class=""> <a href="https://github.com/mardhamardiya18/finalproject"
+                                class="text-decoration-none text-danger ">
+                                Project</a></p>
+
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4 ">
+                    <div class="portofolio-items shadow-sm img-thumbnail text-center">
+                        <img src="img/portoblog.png" class="w-100 shadow-sm " alt="mardha mardiya">
+                        <h3 class="text-capitalize fs-5 my-2 text-danger">Web Blog Application<br> (Laravel + Vuejs)
+                        </h3>
+                        <p class=""> <a href="https://github.com/mardhamardiya18/project-laravel-vue"
+                                class="text-decoration-none text-danger ">
+                                Project</a></p>
+
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4 ">
+                    <div class="portofolio-items shadow-sm img-thumbnail text-center">
+                        <img src="img/portomevn.png" class="w-100 shadow-sm " alt="mardha mardiya">
+                        <h3 class="text-capitalize fs-5 my-2 text-danger">Web information fullstack Application<br>
+                            (MEVN Stack )
+                        </h3>
+                        <p class=""> <a href="https://github.com/mardhamardiya18/M.E.V.N-Fulltack"
+                                class="text-decoration-none text-danger ">
+                                Project</a></p>
 
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4 mt-4">
                     <div class="portofolio-items shadow-sm img-thumbnail text-center">
                         <img src="img/portofolio4.png" class="w-100 shadow-sm " alt="mardha mardiya">
-                        <h3 class="text-capitalize fs-5 my-2 text-danger">Web Application News<br> (Vuejs axios)
+                        <h3 class="text-capitalize fs-5 my-2 text-danger">Web Application News<br> (Vuejs)
                         </h3>
+                        <p class=""> <a href="https://github.com/mardhamardiya18/project-newsBlog-vuejs-RESTfull-API"
+                                class="text-decoration-none text-danger ">
+                                Project</a></p>
 
                     </div>
                 </div>
@@ -171,6 +203,10 @@
                         <img src="img/portofolio5.png" class="w-100 shadow-sm " alt="mardha mardiya">
                         <h3 class="text-capitalize fs-5 my-2 text-danger">Web Design Course<br> (Figma)
                         </h3>
+                        <p class=""> <a
+                                href="https://www.figma.com/file/hrinBHWy31aJWLw5bBeF6Y/KuyDing-LandingPage-Design?node-id=0%3A1"
+                                class="text-decoration-none text-danger ">
+                                Project</a></p>
 
                     </div>
                 </div>
@@ -179,6 +215,10 @@
                         <img src="img/portofolio6.png" class="w-100 shadow-sm " alt="mardha mardiya">
                         <h3 class="text-capitalize fs-5 my-2 text-danger">Web Design Resto<br> (Figma)
                         </h3>
+                        <p class=""> <a
+                                href="https://www.figma.com/file/2pHODP4jdnEtqCaWDBPt0o/nasikotakbjb-web-design?node-id=0%3A1"
+                                class="text-decoration-none text-danger ">
+                                Project</a></p>
 
                     </div>
                 </div>
