--- a/resume/index.html
+++ b/resume/index.html
@@ -184,9 +184,6 @@
                                 <span class="skills__circle"></span> Bootstrap
                             </li>
                             <li class="skills__name">
-                                <span class="skills__circle"></span> Mongodb
-                            </li>
-                            <li class="skills__name">
                                 <span class="skills__circle"></span> Express
                             </li>
                         </ul>
@@ -225,7 +222,7 @@
                             </div>
 
                             <div class="experience__data bd-grid">
-                                <h3 class="experience__title">WEBApps Developer Community Forum</h3>
+                                <h3 class="experience__title">Web Developer Community Forum Application</h3>
                                 <span class="experience__company">July - August 2020 | sanbercode.com</span>
                                 <p class="experience__description">as a requirement for completing a minimum course of
                                     making an application from the course I am taking, which is about Laravel Web
@@ -234,6 +231,7 @@
 
                         </div>
                     </div>
+
 
 
                 </section>
@@ -245,6 +243,17 @@
                     <div class="certificate__container bd-grid">
                         <div class="certificate__content">
                             <h3 class="certificate__title">Certified for Laravel Web Development Sanbercode Bootcamp
+                            </h3>
+                            <p class="certificate__description">have completed bootcamp and web development final
+                                project with laravel</p>
+                        </div>
+                    </div>
+
+                    <br>
+
+                    <div class="certificate__container bd-grid">
+                        <div class="certificate__content">
+                            <h3 class="certificate__title">Certified for Vuejs Web Development Sanbercode Bootcamp
                             </h3>
                             <p class="certificate__description">have completed bootcamp and web development final
                                 project with laravel</p>
