--- a/resume/index.html
+++ b/resume/index.html
@@ -231,7 +231,23 @@
 
                         </div>
                     </div>
+                    <div class="experience__content bd-grid">
+                        <div class="experience__content">
+                            <div class="experience__time">
+                                <span class="experience__rounder"></span>
+                                <span class="experience__line"></span>
+                            </div>
 
+                            <div class="experience__data bd-grid">
+                                <h3 class="experience__title">Web Blog Application</h3>
+                                <span class="experience__company">April - Mei 2021 | sanbercode.com</span>
+                                <p class="experience__description">as a requirement for completing a minimum course of
+                                    making an application from the course I am taking, which is about Vuejs Web
+                                    Development, I build this application with Vuejs</p>
+                            </div>
+
+                        </div>
+                    </div>
 
 
                 </section>
