update pdf mobile and project

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div class="jumbotron text-center" id="home">
         <img src="img/hero.webp" class="img-thumbnail rounded-circle shadow-lg" alt="Mardha Mardiya" width="250">
         <h1 class="txt-dinamis"><span> I Am Mardha Mardiya</span></h1>
-        <h5>Web Designer | Web Developer</h5>
+        <h5>Web Developer</h5>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
             <path fill="#ffffff" fill-opacity="1"
                 d="M0,128L40,138.7C80,149,160,171,240,160C320,149,400,107,480,117.3C560,128,640,192,720,202.7C800,213,880,171,960,160C1040,149,1120,171,1200,165.3C1280,160,1360,128,1400,112L1440,96L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z">
@@ -105,7 +105,7 @@
                     you waiting
                     for</p>
                 <div class="d-flex justify-content-center ">
-                    <a href="#contact" class="btn fs-4 mt-3 contact__button" id="hire">Hire Me</a>
+                    <a href="#contact" class="btn fs-4 mt-3 contact__button" id="hire">Contact</a>
                     <a href="resume/index.html" class="btn fs-4 mt-3 contact__button-cv" id="hire">View CV</a>
                 </div>
             </div>
@@ -149,7 +149,7 @@
                         </h3>
                         <p class=""> <a href="https://github.com/mardhamardiya18/inventory"
                                 class="text-decoration-none text-danger ">
-                                Project</a></p>
+                                View Project</a></p>
 
                     </div>
                 </div>
@@ -160,7 +160,7 @@
                         </h3>
                         <p class=""> <a href="https://github.com/mardhamardiya18/finalproject"
                                 class="text-decoration-none text-danger ">
-                                Project</a></p>
+                                View Project</a></p>
 
                     </div>
                 </div>
@@ -171,7 +171,7 @@
                         </h3>
                         <p class=""> <a href="https://github.com/mardhamardiya18/project-laravel-vue"
                                 class="text-decoration-none text-danger ">
-                                Project</a></p>
+                                View Project</a></p>
 
                     </div>
                 </div>
@@ -183,7 +183,7 @@
                         </h3>
                         <p class=""> <a href="https://github.com/mardhamardiya18/M.E.V.N-Fulltack"
                                 class="text-decoration-none text-danger ">
-                                Project</a></p>
+                                View Project</a></p>
 
                     </div>
                 </div>
@@ -194,7 +194,7 @@
                         </h3>
                         <p class=""> <a href="https://github.com/mardhamardiya18/project-newsBlog-vuejs-RESTfull-API"
                                 class="text-decoration-none text-danger ">
-                                Project</a></p>
+                                View Project</a></p>
 
                     </div>
                 </div>
@@ -206,7 +206,7 @@
                         <p class=""> <a
                                 href="https://www.figma.com/file/hrinBHWy31aJWLw5bBeF6Y/KuyDing-LandingPage-Design?node-id=0%3A1"
                                 class="text-decoration-none text-danger ">
-                                Project</a></p>
+                                View Project</a></p>
 
                     </div>
                 </div>
@@ -218,7 +218,20 @@
                         <p class=""> <a
                                 href="https://www.figma.com/file/2pHODP4jdnEtqCaWDBPt0o/nasikotakbjb-web-design?node-id=0%3A1"
                                 class="text-decoration-none text-danger ">
-                                Project</a></p>
+                                View Project</a></p>
+
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4 mt-4">
+                    <div class="portofolio-items shadow-sm img-thumbnail text-center">
+                        <img src="img/portolanding.png" class="w-100 shadow-sm " alt="mardha mardiya">
+                        <h3 class="text-capitalize fs-5 my-2 text-danger">Redesign Tmint Creative LandingPage<br>
+                            (Figma)
+                        </h3>
+                        <p class=""> <a
+                                href="https://www.figma.com/file/ifWzZmCnNJttMdZ36hof5A/Redesign-UI-UX-Tmint-Creative?node-id=0%3A1"
+                                class="text-decoration-none text-danger ">
+                                View Project</a></p>
 
                     </div>
                 </div>
