--- a/index.html
+++ b/index.html
@@ -235,6 +235,32 @@
 
                     </div>
                 </div>
+                <div class="col-md-6 col-lg-4 mt-4">
+                    <div class="portofolio-items shadow-sm img-thumbnail text-center">
+                        <img src="img/Hero-travel.png" class="w-100 shadow-sm " alt="mardha mardiya">
+                        <h3 class="text-capitalize fs-5 my-2 text-danger">Web Design Travel<br>
+                            (Figma)
+                        </h3>
+                        <p class=""> <a
+                                href="https://www.figma.com/proto/kg43KggcoKBOXZrDFmXzUN/Travel-Header?page-id=0%3A1&node-id=2%3A2&viewport=689%2C593%2C0.5051276087760925&scaling=min-zoom"
+                                class="text-decoration-none text-danger ">
+                                View Project</a></p>
+
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4 mt-4">
+                    <div class="portofolio-items shadow-sm img-thumbnail text-center">
+                        <img src="img/Hero-RentCar.png" class="w-100 shadow-sm " alt="mardha mardiya">
+                        <h3 class="text-capitalize fs-5 my-2 text-danger">Web Design Rent Car<br>
+                            (Figma)
+                        </h3>
+                        <p class=""> <a
+                                href="https://www.figma.com/proto/YXcIp5DCRECE5IYgcrt6Tx/RentCar-Header?page-id=0%3A1&node-id=2%3A2&viewport=633%2C467%2C0.6002193093299866&scaling=min-zoom"
+                                class="text-decoration-none text-danger ">
+                                View Project</a></p>
+
+                    </div>
+                </div>
 
             </div>
         </div>
