--- a/index.html
+++ b/index.html
@@ -261,6 +261,45 @@
 
                     </div>
                 </div>
+                <div class="col-md-6 col-lg-4 mt-4">
+                    <div class="portofolio-items shadow-sm img-thumbnail text-center">
+                        <img src="img/aboutpage.jpg" class="w-100 shadow-sm " alt="mardha mardiya">
+                        <h3 class="text-capitalize fs-5 my-2 text-danger">Web Design about page of Rent Car<br>
+                            (Figma)
+                        </h3>
+                        <p class=""> <a
+                                href="https://www.figma.com/proto/YXcIp5DCRECE5IYgcrt6Tx/RentCar-Header?page-id=0%3A1&node-id=99%3A2&viewport=376%2C244%2C0.12749752402305603&scaling=min-zoom"
+                                class="text-decoration-none text-danger ">
+                                View Project</a></p>
+
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4 mt-4">
+                    <div class="portofolio-items shadow-sm img-thumbnail text-center">
+                        <img src="img/servicepage.jpg" class="w-100 shadow-sm " alt="mardha mardiya">
+                        <h3 class="text-capitalize fs-5 my-2 text-danger">Web Design service page of Rent Car<br>
+                            (Figma)
+                        </h3>
+                        <p class=""> <a
+                                href="https://www.figma.com/proto/YXcIp5DCRECE5IYgcrt6Tx/RentCar-Header?page-id=0%3A1&node-id=148%3A4&viewport=376%2C244%2C0.12749752402305603&scaling=min-zoom"
+                                class="text-decoration-none text-danger ">
+                                View Project</a></p>
+
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4 mt-4">
+                    <div class="portofolio-items shadow-sm img-thumbnail text-center">
+                        <img src="img/header-rentcar2.jpg" class="w-100 shadow-sm " alt="mardha mardiya">
+                        <h3 class="text-capitalize fs-5 my-2 text-danger">Web Design of Rent Car<br>
+                            (Figma)
+                        </h3>
+                        <p class=""> <a
+                                href="https://www.figma.com/proto/YXcIp5DCRECE5IYgcrt6Tx/RentCar-Header?page-id=0%3A1&node-id=194%3A2&viewport=1635%2C448%2C0.2755569815635681&scaling=min-zoom"
+                                class="text-decoration-none text-danger ">
+                                View Project</a></p>
+
+                    </div>
+                </div>
 
             </div>
         </div>
