--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="img/logoletter.png">
 
+    <!-- AOS -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
@@ -54,8 +57,8 @@
     <!-- Start Jumbotron -->
     <div class="jumbotron text-center" id="home">
         <img src="img/hero.webp" class="img-thumbnail rounded-circle shadow-lg" alt="Mardha Mardiya" width="250">
-        <h1 class="txt-dinamis"><span> I Am Mardha Mardiya</span></h1>
-        <h5>Web Developer</h5>
+        <h1 class="txt-dinamis"><span></span></h1>
+        <h5 class="title-job"></h5>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
             <path fill="#ffffff" fill-opacity="1"
                 d="M0,128L40,138.7C80,149,160,171,240,160C320,149,400,107,480,117.3C560,128,640,192,720,202.7C800,213,880,171,960,160C1040,149,1120,171,1200,165.3C1280,160,1360,128,1400,112L1440,96L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z">
@@ -95,10 +98,10 @@
             </div>
         </div>
         <div class="row text-center about">
-            <div class="col-lg-6 img-about">
+            <div class="col-lg-6 img-about" data-aos="fade-right">
                 <img src="img/about.svg" alt="Mardha Mardiya">
             </div>
-            <div class="col-lg-5">
+            <div class="col-lg-5" data-aos="fade-left">
                 <p class="fs-5">Hello, I am <span>Mardha Mardiya</span> as a <span>Web Developer</span> who will
                     complete all of your project
                     requests, <span>Friendly</span> , <span>Flexible</span>, and <span>Open</span> at any time, what are
@@ -132,7 +135,7 @@
                 </div>
             </div>
             <div class="row my-5">
-                <div class="col-md-6 col-lg-4 ">
+                <div class="col-md-6 col-lg-4" data-aos="zoom-in">
                     <div class="portofolio-items shadow-sm img-thumbnail text-center">
                         <img src="img/portofolio1.png" class="w-100 shadow-sm " alt="mardha mardiya">
                         <h3 class="text-capitalize fs-5 my-2 text-danger">Landing Page Resto <br> (HTML/CSS/JavaScript)
@@ -141,7 +144,7 @@
                                 Demo</a></p>
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-4 ">
+                <div class="col-md-6 col-lg-4 " data-aos="zoom-in" data-aos-delay="200">
                     <div class="portofolio-items shadow-sm img-thumbnail text-center">
                         <img src="img/portofolio2.png" class="w-100 shadow-sm " alt="mardha mardiya">
                         <h3 class="text-capitalize fs-6 my-2 text-danger">Web Application <br> Wirehouse Information
@@ -153,7 +156,7 @@
 
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-4 ">
+                <div class="col-md-6 col-lg-4 " data-aos="zoom-in" data-aos-delay="400">
                     <div class="portofolio-items shadow-sm img-thumbnail text-center">
                         <img src="img/portofolio3.png" class="w-100 shadow-sm " alt="mardha mardiya">
                         <h3 class="text-capitalize fs-5 my-2 text-danger">Web Application Community<br> (Laravel)
@@ -164,7 +167,7 @@
 
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-4 ">
+                <div class="col-md-6 col-lg-4 " data-aos="zoom-in">
                     <div class="portofolio-items shadow-sm img-thumbnail text-center">
                         <img src="img/portoblog.png" class="w-100 shadow-sm " alt="mardha mardiya">
                         <h3 class="text-capitalize fs-5 my-2 text-danger">Web Blog Application<br> (Laravel + Vuejs)
@@ -175,7 +178,7 @@
 
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-4 ">
+                <div class="col-md-6 col-lg-4 " data-aos="zoom-in" data-aos-delay="200">
                     <div class="portofolio-items shadow-sm img-thumbnail text-center">
                         <img src="img/portomevn.png" class="w-100 shadow-sm " alt="mardha mardiya">
                         <h3 class="text-capitalize fs-5 my-2 text-danger">Web information fullstack Application<br>
@@ -187,7 +190,7 @@
 
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-4 mt-4">
+                <div class="col-md-6 col-lg-4 mt-4" data-aos="zoom-in" data-aos-delay="400">
                     <div class="portofolio-items shadow-sm img-thumbnail text-center">
                         <img src="img/portofolio4.png" class="w-100 shadow-sm " alt="mardha mardiya">
                         <h3 class="text-capitalize fs-5 my-2 text-danger">Web Application News<br> (Vuejs)
@@ -198,7 +201,7 @@
 
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-4 mt-4">
+                <div class="col-md-6 col-lg-4 mt-4" data-aos="zoom-in">
                     <div class="portofolio-items shadow-sm img-thumbnail text-center">
                         <img src="img/portofolio5.png" class="w-100 shadow-sm " alt="mardha mardiya">
                         <h3 class="text-capitalize fs-5 my-2 text-danger">Web Design Course<br> (Figma)
@@ -210,7 +213,7 @@
 
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-4 mt-4">
+                <div class="col-md-6 col-lg-4 mt-4" data-aos="zoom-in" data-aos-delay="200">
                     <div class="portofolio-items shadow-sm img-thumbnail text-center">
                         <img src="img/portofolio6.png" class="w-100 shadow-sm " alt="mardha mardiya">
                         <h3 class="text-capitalize fs-5 my-2 text-danger">Web Design Resto<br> (Figma)
@@ -222,7 +225,7 @@
 
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-4 mt-4">
+                <div class="col-md-6 col-lg-4 mt-4" data-aos="zoom-in" data-aos-delay="400">
                     <div class="portofolio-items shadow-sm img-thumbnail text-center">
                         <img src="img/portolanding.png" class="w-100 shadow-sm " alt="mardha mardiya">
                         <h3 class="text-capitalize fs-5 my-2 text-danger">Redesign Tmint Creative LandingPage<br>
@@ -235,7 +238,7 @@
 
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-4 mt-4">
+                <div class="col-md-6 col-lg-4 mt-4" data-aos="zoom-in">
                     <div class="portofolio-items shadow-sm img-thumbnail text-center">
                         <img src="img/Hero-travel.png" class="w-100 shadow-sm " alt="mardha mardiya">
                         <h3 class="text-capitalize fs-5 my-2 text-danger">Web Design Travel<br>
@@ -248,7 +251,7 @@
 
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-4 mt-4">
+                <div class="col-md-6 col-lg-4 mt-4" data-aos="zoom-in" data-aos-delay="200">
                     <div class="portofolio-items shadow-sm img-thumbnail text-center">
                         <img src="img/Hero-RentCar.png" class="w-100 shadow-sm " alt="mardha mardiya">
                         <h3 class="text-capitalize fs-5 my-2 text-danger">Web Design Rent Car<br>
@@ -261,7 +264,7 @@
 
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-4 mt-4">
+                <div class="col-md-6 col-lg-4 mt-4" data-aos="zoom-in" data-aos-delay="400">
                     <div class="portofolio-items shadow-sm img-thumbnail text-center">
                         <img src="img/aboutpage.jpg" class="w-100 shadow-sm " alt="mardha mardiya">
                         <h3 class="text-capitalize fs-5 my-2 text-danger">Web Design about page of Rent Car<br>
@@ -274,7 +277,7 @@
 
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-4 mt-4">
+                <div class="col-md-6 col-lg-4 mt-4" data-aos="zoom-in">
                     <div class="portofolio-items shadow-sm img-thumbnail text-center">
                         <img src="img/servicepage.jpg" class="w-100 shadow-sm " alt="mardha mardiya">
                         <h3 class="text-capitalize fs-5 my-2 text-danger">Web Design service page of Rent Car<br>
@@ -287,7 +290,7 @@
 
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-4 mt-4">
+                <div class="col-md-6 col-lg-4 mt-4" data-aos="zoom-in" data-aos-delay="200">
                     <div class="portofolio-items shadow-sm img-thumbnail text-center">
                         <img src="img/header-rentcar2.jpg" class="w-100 shadow-sm " alt="mardha mardiya">
                         <h3 class="text-capitalize fs-5 my-2 text-danger">Web Design of Rent Car<br>
@@ -307,7 +310,7 @@
     <!-- End Project -->
     <!-- contact start -->
     <section class="contact_section" id="contact">
-        <div class="container">
+        <div class="container" data-aos="fade-down" data-aos-duration="1000">
             <div class="row text-center">
                 <div class="col-md">
                     <h2>Contact</h2>
@@ -358,6 +361,24 @@
         </div>
         <p>&#169; 2021 copyright All right reserved</p>
     </section>
+    <!-- AOS -->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/TextPlugin.min.js"></script>
+    <script>
+        gsap.from(".jumbotron img", { duration: 2, y: -500, ease: 'bounce', delay: 0.5 });
+
+        gsap.to(".txt-dinamis span", { duration: 2, text: "I Am Mardha Mardiya", delay: 2.5 });
+        gsap.to(".title-job", { duration: 2, text: "Web Developer", delay: 4.5 });
+        gsap.from(".navbar", { duration: 2, y: -100, ease: 'power4' });
+        gsap.registerPlugin(TextPlugin);
+    </script>
+
+
     <!-- footer end -->
     <script src="js/sweetalert2.all.min.js"></script>
 
