--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
                         <a class="nav-link text-white page-scroll" href="#project">Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white page-scroll" href="#contact">Contact</a>
+                        <a class="nav-link text-white page-scroll" href="#contact">Contac</a>
+                        
                     </li>
                 </ul>
             </div>
